--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,162 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav {
+  height: 8vh;
+  width: 100%;
+  background-color: black;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+
+.title{
+  width: 50%;
+  font-size: 13pt;
+  text-transform: uppercase;
+  font-family: "Montserrat";
+  font-weight: bold;
+  color: #47a4db;
+  line-height: 8vh;
+  padding-left: 10pt;
+  padding-right: 10pt;
+}
+
+.search{
+  height: 100%;
+  width: 50%;
+  text-align: right;
+  padding-left: 10pt;
+  padding-right: 10pt;
+}
+
+.searchButton{
+  border-radius: 1pt;
+  border: none;
+  width: 65pt;
+  height: 25pt;
+  margin-top: 2.5vh;
+  text-transform: uppercase;
+  font-size: 11pt;
+  background-color: #1d82c5;
   color: white;
+  
+}
+.searchImput{
+ width: 160pt;
+ background-color: #505050;
+ border-radius: 1pt;
+ border: none;
+ height: 25pt;
+ margin-left: 10pt;
 }
 
-.App-link {
-  color: #61dafb;
+.searchImput::placeholder{
+  color: white;
+  text-align: center;
+  font-size: 10pt;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.imageCropper{
+  height: 100%;
+  width: 100%;
+  z-index: -1;
+  position: absolute;
+  overflow: hidden;
+  background-color: #ffc36a;
+}
+
+#fetchImg{
+  width: 100%;
+  object-fit: cover;
+}
+
+.center{
+  height: 93vh;
+  width: 100%;
+  background: linear-gradient(#00000013, #252525a1, #252525);
+}
+
+.city-state{
+  width: 45%;
+  margin: auto;
+  height: 45vh;
+}
+
+.city {
+  font-family: "brusher";
+  font-size: 120pt;
+  color: white;
+  text-align: center;
+  padding-top: 13vh;
+}
+
+.state{
+  text-transform: uppercase;
+  font-family: "Montserrat";
+  font-size: 25pt;
+  font-weight: 600;
+  color: white;
+  float: right;
+  margin-top: -40pt;
+  letter-spacing: 3pt;
+}
+
+.header{
+  background-color: #f39820;
+  border-radius: 2pt 2pt 0pt 0pt;
+  width: 45%;
+  height: 23pt;
+  text-align: center;
+  font-size: 10pt;
+  text-transform: uppercase;
+  color:#1d82c5;
+  line-height: 23pt;
+  font-weight: bold;
+  letter-spacing: 1pt;
+  padding-top: 3pt;
+}
+
+.fetchContainers{
+  width: 100%;
+  height: 265pt;
+  padding-top: 10pt;
+  background-color: #f39820;
+}
+
+.nasaFetch{
+  height: 245pt;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #1d82c5;
+  z-index: 2;
+  position: inherit;
+}
+
+.weatherFetch{
+  height: 245pt;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #1d82c5;
+  z-index: 2;
+  position: inherit;
+}
+
+.eatsFetch{
+  height: 245pt;
+  width: 92%;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #1d82c5;
+  z-index: 2;
+  position: inherit;
+}
+.footer{
+  height: 20vh;
+  width: 100%;
+  background-color: black;
+}
+
+.copyright{
+  text-align: center;
+  color: #47a4db;
+  line-height: 20vh;
 }
