--- a/client/src/App.css
+++ b/client/src/App.css
@@ -110,7 +110,7 @@
   text-align: center;
   font-size: 10pt;
   text-transform: uppercase;
-  color:#1d82c5;
+  color:#051622;
   line-height: 23pt;
   font-weight: bold;
   letter-spacing: 1pt;
@@ -126,7 +126,7 @@
 
 .nasaFetch{
   height: 245pt;
-  width: 92%;
+  width: 322px;
   margin-left: auto;
   margin-right: auto;
   background-color: #1d82c5;
@@ -134,9 +134,15 @@
   position: inherit;
 }
 
+#bird{
+  width: 322px;
+  height: 245pt;
+  object-fit: cover;
+}
+
 .weatherFetch{
   height: 245pt;
-  width: 92%;
+  width: 322px;
   margin-left: auto;
   margin-right: auto;
   background-color: #1d82c5;
@@ -146,10 +152,10 @@
 
 .eatsFetch{
   height: 245pt;
-  width: 92%;
+  width: 322px;
   margin-left: auto;
   margin-right: auto;
-  background-color: #1d82c5;
+  background-color: #135f92;
   z-index: 2;
   position: inherit;
 }
@@ -252,7 +258,7 @@
     text-align: center;
     font-size: 10pt;
     text-transform: uppercase;
-    color:#1d82c5;
+    color:#051622;
     line-height: 23pt;
     font-weight: bold;
     letter-spacing: 1pt;
@@ -293,7 +299,7 @@
     width: 92%;
     margin-left: auto;
     margin-right: auto;
-    background-color: #1d82c5;
+    background-color: #135f92;
     z-index: 2;
     position: inherit;
   }
@@ -423,7 +429,7 @@
     text-align: center;
     font-size: 10pt;
     text-transform: uppercase;
-    color:#1d82c5;
+    color:#051622;
     line-height: 23pt;
     font-weight: bold;
     letter-spacing: 1pt;
@@ -463,7 +469,7 @@
     width: 92%;
     margin-left: auto;
     margin-right: auto;
-    background-color: #1d82c5;
+    background-color: #135f92;
     z-index: 2;
     position: inherit;
   }
@@ -593,7 +599,7 @@
     text-align: center;
     font-size: 10pt;
     text-transform: uppercase;
-    color:#1d82c5;
+    color:#051622;
     line-height: 23pt;
     font-weight: bold;
     letter-spacing: 1pt;
@@ -633,7 +639,7 @@
     width: 92%;
     margin-left: auto;
     margin-right: auto;
-    background-color: #1d82c5;
+    background-color: #135f92;
     z-index: 2;
     position: inherit;
   }
